# veles

./: .coderabbit.yaml  .env.example  .gitignore  README.md  cost.db  pyproject.toml
.claude/: launch.json  settings.local.json
config/: models.yaml
docs/: main-doc.md  phase5-ui-design-brief.md
knowledge/notes/: redis-caching-strategy.md
src/aks/: main.py
src/aks/agents/: base.py
src/aks/config/: models.yaml  system.yaml
src/aks/config/agents/: code.yaml  pkm.yaml  planning.yaml  writing.yaml
src/aks/knowledge/: store.py
src/aks/models/: llm.py
src/aks/orchestrator/: router.py
src/aks/retrieval/: search.py
src/aks/utils/: config.py  cost.py
src/aks/web/: app.py
src/aks/web/templates/: index.html
src/aks/web/templates/partials/: chat_turn.html  note_detail.html  note_list.html  status_panel.html
tests/: test_chaining.py  test_config_files.py  test_streaming.py
