[project]
name = "veles"
version = "0.1.0"
description = "Agent Knowledge System — personal AI assistant grounded in your notes"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "google-genai>=1.0",
    "chromadb>=0.6",
    "click>=8.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=2.30.0",
    "trafilatura>=1.12",
    "lxml_html_clean>=0.1",
    "pypdf>=4.0",
    # Web UI (Phase 5)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
]

[project.scripts]
aks = "aks.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aks"]
include = ["src/aks/config/**", "src/aks/web/templates/**", "src/aks/web/static/**"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
